--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Login==0.4.0
 Flask-Script==2.0.5
 Flask-WTF==0.14.2
 ForgeryPy==0.1
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==0.23
